# detect_ros2

./: README.md
install/: local_setup.sh  setup.sh
install/detection_launch/share/detection_launch/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/detection_launch/share/detection_launch/launch/: detection.launch.py
install/object_detector/lib/object_detector/: object_detection_node
install/object_detector/share/object_detector/: local_setup.dsv  package.dsv  package.ps1  package.sh  package.xml
install/object_detector/share/object_detector/cmake/: object_detectorConfig.cmake
install/result_viewer/lib/result_viewer/: result_viewer_node
install/result_viewer/share/ament_index/resource_index/package_run_dependencies/: result_viewer
install/result_viewer/share/result_viewer/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/video_publisher/lib/video_publisher/: video_publisher_node
install/video_publisher/share/video_publisher/: package.sh
src/detection_launch/: CMakeLists.txt
src/object_detector/: CMakeLists.txt
src/object_detector/include/object_detector/: object_detection_node.hpp
src/object_detector/src/: object_detection_node.cpp
src/result_viewer/: CMakeLists.txt
src/result_viewer/include/result_viewer/: result_viewer_node.hpp
src/result_viewer/src/: result_viewer_node.cpp
src/video_publisher/: CMakeLists.txt  package.xml
src/video_publisher/include/video_publisher/: video_publisher_node.hpp
src/video_publisher/src/: video_publisher_node.cpp
